# Weave_Engine

./: .gitignore  .gitmodules  .gitmodules_bak  Boost_Install.md  CMakeLists.txt  Jenkinsfile  README.md  bindingLua.md
.github/ISSUE_TEMPLATE/: bug_report.md
Assignment 5 - Models & Lights/: Assignment 5 - Models & Lights.docx  Assignment 5 - OBJLoader.txt
DX11Starter/: DX11Starter.sln
DX11Starter/DX11Starter/: DX11Starter.vcxproj  DXCore.cpp  Main.cpp  SimpleShader.cpp  Vertex.h
HW2_Meshes/HW2_Meshes/: HW2_Meshes.vcxproj  HW2_Meshes.vcxproj.filters  Mesh.h  VertexShader.hlsl
HW3_Moving/: HW3_Moving.sln
HW3_Moving/HW3_Moving/: Entity.cpp  Entity.h  Game.cpp  Game.h  HW3_Moving.vcxproj  HW3_Moving.vcxproj.filters  Mesh.h
Hoffman_GGP/: Hoffman_GGP.sln
Hoffman_GGP/Assets/Scripts/: loadMaterials.lua  test.lua
Hoffman_GGP/Hoffman_GGP/: Camera.cpp  Camera.h  ComponentManager.cpp  ComponentManager.h  DebugSettings.h  Entity.cpp  Entity.h  EntityManager.cpp  EntityManager.h  FamilyTypeID.cpp  FamilyTypeID.h  Game.cpp  Game.h  Hoffman_GGP.vcxproj  Hoffman_GGP.vcxproj.filters  IComponent.h  InputManager.cpp  InputManager.h  Lighting.hlsli  Lights.h  Logger.cpp  Logger.h  Main.cpp  Material.cpp  Material.h  MathHelper.h  Mesh.cpp  Mesh.h  PixelShader.hlsl  RenderManager.cpp  RenderManager.h  ResourceManager.cpp  ResourceManager.h  SimpleShader.cpp  SkyPS.hlsl  SkyVS.hlsl  TestComponent.h  TestComponentTwo.cpp  TestComponentTwo.h  Vertex.h  (+3 more)
Hoffman_GGP/Hoffman_GGP/Core/: DXCore.cpp  DXCore.h  DebugSettings.h  Definitions.h  Game.cpp  Game.h  InputManager.cpp  InputManager.h  Logger.cpp  Logger.h  Main.cpp  SceneManager.cpp  SceneManager.h
Hoffman_GGP/Hoffman_GGP/ECS/: Component.h  FamilyTypeID.cpp  IComponent.h
Hoffman_GGP/Hoffman_GGP/Editor/: EditorCore.cpp  EditorCore.h
Hoffman_GGP/Hoffman_GGP/Entity/: Camera.cpp  Camera.h  Entity.cpp  Entity.h  EntityManager.cpp  EntityManager.h  Transform.cpp  Transform.h
Hoffman_GGP/Hoffman_GGP/Input/: IInput_Impl.h  InputManager.cpp  InputManager.h  Input_Win.h
Hoffman_GGP/Hoffman_GGP/Lighting/: DirLight.cpp  DirLight.h  LightShaderDefs.h  Lights.h  PointLight.cpp  PointLight.h
Hoffman_GGP/Hoffman_GGP/Physics/: BoxCollider.cpp  BoxCollider.h  Collisions.cpp  Collisions.h  PhysicsManager.cpp  PhysicsManager.h  RigidBody.cpp  RigidBody.h
Hoffman_GGP/Hoffman_GGP/Resources/: ISaveable.h  LightSystem.cpp  LightSystem.h  Material.h  Mesh.cpp  Mesh.h  RenderManager.h  RenderSystem.cpp  RenderSystem.h  ResourceManager.cpp  ResourceManager.h  SimpleShader.cpp  SimpleShader.h
Hoffman_GGP/Hoffman_GGP/Scripting/: ScriptUtils.cpp  ScriptUtils.h
Hoffman_GGP/Hoffman_GGP/Utils/: Dispatcher.hpp  MathHelper.cpp  MathHelper.h  ScriptHelper.cpp  ScriptHelper.h
Hoffman_GGP/additional/Autodesk_2019_0/: readme.txt
Homeworks/HW2_Meshes/: HW2_Meshes.sln
Homeworks/HW2_Meshes/HW2_Meshes/: Game.cpp  Game.h  HW2_Meshes.vcxproj.filters  Mesh.cpp  Mesh.h  SimpleShader.h
Weave_Common/: MathHelper.h  MemoryBitStream.cpp  MemoryBitStream.h  Timing.cpp  Timing.h  stdafx.h
Weave_Common/ECS/: Component.h  ComponentManager.cpp  ComponentManager.h  FamilyTypeID.cpp  IComponent.cpp  IComponent.h
Weave_Common/Entity/: Entity.cpp  Entity.h  IEntity.cpp  IEntity.h  Transform.cpp  Transform.h
Weave_Common/Input/: InputBindings.h
Weave_Common/Logging/: Logger.cpp  Logger.h
Weave_Common/Networking/: DeliveryNotificationManager.cpp  DeliveryNotificationManager.h  IScoreboard.h  InFlightPacket.cpp  InFlightPacket.h  NetworkManager.cpp  NetworkManager.h  ReplicationActions.h
Weave_Common/Scenes/: IScene.cpp  IScene.h
Weave_Common/Utils/: IPoolable.h  ObjectPool.hpp  SaveFileDefs.h  Singleton.hpp
Weave_Common/include/: MemoryBitStream.h
Weave_Common/src/: MemoryBitStream.cpp
Weave_Engine/: Weave_Engine.sln
Weave_Engine/Assets/Materials/: Bronze.wmat  Bullet.wmat  Cobblestone.wmat
Weave_Engine/Assets/Models/: My_Tank.blend  My_Tank.blend1  ico_scphere.fbx
Weave_Engine/Assets/Scenes/: MainMenu.json  Scene_test.json  scene_2.json
Weave_Engine/Assets/Scripts/: FlyingCamera.lua  TankMovement.lua  loadLevel.lua  loadMaterials.lua  test.lua
Weave_Engine/TankGame/: Main.cpp  PlayerMoves.h  Scoreboard.cpp  Scoreboard.h  Tank.cpp  Tank.h  TankGame.cpp  TankGame.vcxproj  TankGame.vcxproj.filters  packages.config  pch.h
Weave_Engine/TankGame/Components/: Bullet.cpp  Bullet.h
Weave_Engine/TankGame/Game/: PlayerMoves.cpp  PlayerMoves.h  TankGame.cpp  TankGame.h
Weave_Engine/TankGame/Networking/: ClientNetworkManager.cpp  ClientNetworkManager.h  Scoreboard.cpp  Scoreboard.h
Weave_Engine/Weave_Engine/: Config.h  Editor_Outline.hlsl  MathHelper.h  PixelShader.hlsl  SkyVS.hlsl  UI_OPTIONS.h  Weave_Engine.vcxproj  Weave_Engine.vcxproj.filters  cpp.hint  packages.config  stdafx.h
Weave_Engine/Weave_Engine/Camera/: Camera.cpp  Camera.h  CameraManager.cpp
Weave_Engine/Weave_Engine/Core/: CameraManager.cpp  CameraManager.h  DXCore.cpp  DXCore.h  Game.cpp  Game.h  Main.cpp  SceneManager.cpp  SceneManager.h
Weave_Engine/Weave_Engine/ECS/: Component.h  ComponentManager.cpp  ComponentManager.h  FamilyTypeID.cpp  IComponent.cpp  IComponent.h
Weave_Engine/Weave_Engine/Editor/: EditorCore.cpp  EditorCore.h  Gizmo.cpp  Gizmo.h
Weave_Engine/Weave_Server/: CMakeLists.txt
Weave_Engine/Weave_Server/include/: Funcs.h
Weave_Engine/Weave_Server/src/: Main.cpp
Weave_Server/: .gitignore  CMakeLists.txt  README.md  errors  run.sh  server.conf
Weave_Server/Docker/: Dockerfile
Weave_Server/Weave_Server/: ALL_BUILD.vcxproj  CMakeLists.txt  Weave_Server.sln
Weave_Server/Weave_Server/Weave_Server/: Weave_Server.vcxproj  Weave_Server.vcxproj.filters
Weave_Server/Weave_Server/include/: ClientProxy.h  Config.h  Room.h  ServerNetworkManager.h  ServerScene.h  ServerScoreboard.h  ServerUtils.h  WeaveServer.h
Weave_Server/Weave_Server/src/: ClientProxy.cpp  Main.cpp  Room.cpp  ServerNetworkManager.cpp  ServerScene.cpp  ServerScoreboard.cpp  WeaveServer.cpp
Weave_Tests/: CMakeLists.txt  README.md  Tests.cpp
(+66 files in other folders)
